gcc/testsuite/g++.dg/cpp0x/variadic118.C
// { dg-do compile { target c++11 } }

template <class... T>
void f(T... ts);

struct B { };
int main()
{
  f<int>(B(), 1);		// { dg-error "" }
}
